--- a/package.json
+++ b/package.json
@@ -5,29 +5,49 @@
   "description": "Shared functionality to be used by apps for 'Wonen'",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "react-scripts test --watchAll=false",
+    "test:coverage": "react-scripts test --coverage --watchAll=false",
+    "lint": "eslint --max-warnings 0 --cache --ext .ts,.tsx src",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "build": "rm -Rf ./dist && tsc ./src/index.ts --strict --esModuleInterop --declaration --skipLibCheck --jsx react --outDir dist && cp ./package.json ./dist/package.json",
-    "publish": "cp package.json dist/ && cd dist && npm publish --access public"
+    "publish": "cp package.json dist/ && cd dist && npm publish"
   },
   "repository": {
     "type": "git",
     "url": ""
   },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "dependencies": {
+    "react-scripts": "^4.0.3"
+  },
   "peerDependencies": {
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
   "devDependencies": {
     "@storybook/react": "^6.1.21",
+    "@types/enzyme": "3.10.8",
+    "@types/enzyme-adapter-react-16": "1.0.6",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.6",
     "eslint": "^7.22.0",
     "eslint-plugin-unused-imports": "^1.1.0",
+    "ts-jest": "26.5.4",
     "typescript": "^4.2.3"
   },
-  "dependencies": {}
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{ts,tsx}",
+      "!src/**/*.stories.{ts,tsx}",
+      "!src/**/*.d.ts",
+      "!src/**/index.{ts,tsx}"
+    ]
+  },
+  "publishConfig": {
+    "access": "public"
+  }
 }
