--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.6",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.22.0",
     "eslint-plugin-unused-imports": "^1.1.0",
     "ts-jest": "26.5.4",
