--- a/package.json
+++ b/package.json
@@ -19,9 +19,6 @@
   "keywords": [],
   "author": "",
   "license": "MIT",
-  "dependencies": {
-    "react-scripts": "^4.0.3"
-  },
   "peerDependencies": {
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
@@ -37,7 +34,8 @@
     "eslint": "^7.22.0",
     "eslint-plugin-unused-imports": "^1.1.0",
     "ts-jest": "26.5.4",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "react-scripts": "^4.0.3"
   },
   "jest": {
     "collectCoverageFrom": [
