--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-unused-imports": "^1.1.0",
     "ts-jest": "26.5.4",
     "typescript": "^4.2.3",
+    "react": "^16.14.0",
     "react-scripts": "^4.0.3"
   },
   "jest": {
