--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ts-jest": "26.5.4",
     "typescript": "^4.2.3",
     "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-scripts": "^4.0.3"
   },
   "jest": {
