--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@amsterdam/wonen-ui",
-  "version": "0.0.8",
+  "version": "0.0.7",
   "private": false,
   "description": "Shared functionality to be used by apps for 'Wonen'",
   "main": "index.js",
@@ -10,7 +10,7 @@
     "lint": "eslint --max-warnings 0 --cache --ext .ts,.tsx src",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "build": "rm -Rf ./dist && tsc ./src/index.ts --strict --esModuleInterop --declaration --skipLibCheck --jsx react --outDir dist && cp ./package.json ./dist/package.json",
-    "publish": "cp package.json dist/ && cd dist && npm publish"
+    "publish": "npm version patch && cp package.json dist/ && cd dist && npm publish"
   },
   "repository": {
     "type": "git",
