--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "react-scripts test --watchAll=false",
     "test:coverage": "react-scripts test --coverage --watchAll=false",
     "lint": "eslint --max-warnings 0 --cache --ext .ts,.tsx src",
+    "storybook:build": "build-storybook -s public -o docs",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "build": "rm -Rf ./dist && tsc ./src/index.ts --strict --esModuleInterop --declaration --skipLibCheck --jsx react --outDir dist && cp ./package.json ./dist/package.json",
     "publish": "cp package.json dist/ && cd dist && npm publish"
@@ -22,6 +23,12 @@
   "peerDependencies": {
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
+  },
+  "dependencies": {
+    "@amsterdam/asc-assets": "^0.28.0",
+    "@amsterdam/asc-ui": "^0.28.0",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2"
   },
   "devDependencies": {
     "@storybook/react": "^6.1.21",
