--- a/package.json
+++ b/package.json
@@ -35,17 +35,18 @@
     "@storybook/react": "^6.1.21",
     "@types/enzyme": "3.10.8",
     "@types/enzyme-adapter-react-16": "1.0.6",
+    "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.22.0",
     "eslint-plugin-unused-imports": "^1.1.0",
-    "ts-jest": "26.5.4",
-    "typescript": "^4.2.3",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "ts-jest": "26.5.4",
+    "typescript": "^4.2.3"
   },
   "jest": {
     "collectCoverageFrom": [
