--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "Shared functionality to be used by apps for 'Wonen'",
   "main": "index.js",
   "scripts": {
-    "test": "react-scripts test --watchAll=false",
-    "test:coverage": "react-scripts test --coverage --watchAll=false",
+    "test": "SKIP_PREFLIGHT_CHECK=true react-scripts test --watchAll=false",
+    "test:coverage": "SKIP_PREFLIGHT_CHECK=true react-scripts test --coverage --watchAll=false",
     "lint": "eslint --max-warnings 0 --cache --ext .ts,.tsx src",
     "storybook:build": "build-storybook -s public -o docs",
     "storybook": "start-storybook -p 9001 -c .storybook",
@@ -47,7 +47,6 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "^4.0.3",
-    "ts-jest": "27.0.2",
     "typescript": "^4.2.3"
   },
   "jest": {
