--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "author": "",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "dependencies": {
     "@amsterdam/asc-assets": "^0.29.3",
@@ -44,8 +44,8 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.22.0",
     "eslint-plugin-unused-imports": "^1.1.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-scripts": "^4.0.3",
     "typescript": "^4.2.3"
   },
