--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   "author": "",
   "license": "MIT",
   "peerDependencies": {
-    "@amsterdam/asc-assets": "^0.29.3",
-    "@amsterdam/asc-ui": "^0.29.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-components": "^5.2.1"
+    "@amsterdam/asc-assets": ">= 0.29",
+    "@amsterdam/asc-ui": ">= 0.29",
+    "react": ">= 16",
+    "react-dom": ">= 16",
+    "styled-components": ">= 5"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
