--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "react-dom": "17.0.2",
     "react-scripts": "^4.0.3",
     "styled-components": "^5.2.1",
-    "typescript": "^4.2.3"
+    "typescript": "4.2.2"
   },
   "jest": {
     "collectCoverageFrom": [
