--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "SKIP_PREFLIGHT_CHECK=true react-scripts test --watchAll=false",
     "test:coverage": "SKIP_PREFLIGHT_CHECK=true react-scripts test --coverage --watchAll=false",
     "lint": "eslint --max-warnings 0 --cache --ext .ts,.tsx src",
-    "storybook:build": "build-storybook -s public -o docs",
+    "storybook:build": "build-storybook -o docs",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "build": "rm -Rf ./dist && tsc ./src/index.ts --strict --esModuleInterop --declaration --skipLibCheck --jsx react --outDir dist && cp ./package.json ./dist/package.json",
     "publish": "cp package.json dist/ && cd dist && npm publish"
