--- a/package.json
+++ b/package.json
@@ -35,22 +35,22 @@
     "@amsterdam/asc-assets": "^0.30.0",
     "@amsterdam/asc-ui": "^0.30.0",
     "@storybook/react": "^6.1.21",
-    "@types/enzyme": "3.10.8",
-    "@types/enzyme-adapter-react-16": "1.0.6",
+    "@types/enzyme": "^3.10.8",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
-    "enzyme": "3.11.0",
+    "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.22.0",
     "eslint-plugin-unused-imports": "^1.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "styled-components": "^5.2.1",
-    "typescript": "4.3.4"
+    "typescript": "^4.3.4"
   },
   "jest": {
     "collectCoverageFrom": [
