--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@amsterdam/wonen-ui",
-  "version": "0.0.65",
+  "version": "0.0.64",
   "private": false,
   "description": "Shared functionality to be used by apps for 'Wonen'",
   "main": "index.js",
   "scripts": {
     "test": "SKIP_PREFLIGHT_CHECK=true react-scripts test --watchAll=false",
+    "test:watch": "SKIP_PREFLIGHT_CHECK=true react-scripts test --watchAll=true",
     "test:coverage": "SKIP_PREFLIGHT_CHECK=true react-scripts test --coverage --watchAll=false",
     "lint": "eslint --max-warnings 0 --cache --ext .ts,.tsx src",
     "storybook:build": "build-storybook -o docs",
