--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.22.0",
     "eslint-plugin-unused-imports": "^1.1.0",
     "react": "^17.0.2",
