--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@amsterdam/wonen-ui",
-  "version": "0.0.76",
+  "version": "1.0.0",
   "private": false,
   "description": "Shared functionality to be used by apps for 'Wonen'",
   "main": "index.js",
   "scripts": {
+    "start": "npm run storybook",
     "test": "SKIP_PREFLIGHT_CHECK=true react-scripts test --watchAll=false",
     "test:coverage": "SKIP_PREFLIGHT_CHECK=true react-scripts test --coverage --watchAll=false",
     "lint": "eslint --max-warnings 0 --cache --ext .ts,.tsx src",
