--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "@amsterdam/asc-ui": "^0.35.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "@storybook/addon-essentials": "^6.3.6",
-    "@storybook/react": "^6.1.21",
+    "@storybook/addon-essentials": "^6.4.9",
+    "@storybook/react": "^6.4.9",
     "@types/dompurify": "^2.2.3",
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
@@ -54,6 +54,7 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "enzyme": "^3.11.0",
     "eslint": "^7.22.0",
+    "eslint-plugin-storybook": "^0.5.5",
     "eslint-plugin-unused-imports": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
