--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "dependencies": {
     "dompurify": "^2.3.0",
     "lodash.get": "^4.4.2",
+    "lodash.pickby": "^4.6.0",
+    "moment": "^2.29.2",
     "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
@@ -39,13 +41,14 @@
     "@amsterdam/asc-ui": "^0.35.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "@storybook/addon-essentials": "^6.4.9",
-    "@storybook/react": "^6.4.9",
+    "@storybook/addon-essentials": "^6.4.21",
+    "@storybook/react": "^6.4.21",
     "@types/dompurify": "^2.2.3",
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^27.0.1",
     "@types/lodash.get": "^4.4.6",
+    "@types/lodash.pickby": "^4.6.6",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.9",
@@ -54,7 +57,7 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "enzyme": "^3.11.0",
     "eslint": "^7.22.0",
-    "eslint-plugin-storybook": "^0.5.5",
+    "eslint-plugin-storybook": "^0.5.8",
     "eslint-plugin-unused-imports": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
