--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.69",
   "private": false,
   "description": "Shared functionality to be used by apps for 'Wonen'",
-  "repository": "https://github.com/Amsterdam/wonen-ui.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Amsterdam/wonen-ui.git"
+  },
   "license": "MIT",
   "main": "index.js",
   "scripts": {
