--- a/.github/workflows/combine-prs.yml
+++ b/.github/workflows/combine-prs.yml
@@ -22,6 +22,10 @@ on:
         required: true
         default: 'nocombine'
 
+permissions:
+  contents: read
+  security-events: write
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "combine-prs"
