--- a/.github/workflows/combine-prs.yml
+++ b/.github/workflows/combine-prs.yml
@@ -23,8 +23,8 @@ on:
         default: 'nocombine'
 
 permissions:
-  contents: read
-  security-events: write
+  contents: write
+  pull-requests: write
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
